<resources>
    <string name="app_name">Basic_weixin</string>

    <string name="title">WeChat</string>

    <string name="message">聊天</string>
    <string name="message_info">这里是聊天界面</string>

    <string name="friend">朋友</string>
    <string name="friend_info">这里是朋友界面</string>
    <string name="friend_name">姓名:</string>
    <string name="friend_sex">性别:</string>
    <string name="friend_age">年龄:</string>
    <string name="add">添加</string>

    <string name="address">通讯录</string>
    <string name="address_info">这里是通讯录界面</string>
    <string name="address_img">这是名侦探柯南通讯录图片</string>
    <string name="address_img_info">这是名侦探柯南通讯录</string>

    <string name="settings">设置</string>
    <string name="settings_info">这里是设置界面</string>


    <string name="send">发送</string>
    <string name="not_connected">你没有链接一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙不可用，离开聊天室</string>
    <string name="title_connecting">链接中~</string>
    <string name="title_connected_to">连接到：</string>
    <string name="title_not_connected">无链接</string>
    <string name="scanning">蓝牙设备搜索中~</string>
    <string name="select_device">选择一个好友链接</string>
    <string name="none_paired">没有配对好友</string>
    <string name="none_found">附近没有发现好友</string>
    <string name="title_paired_devices">已配对好友</string>
    <string name="title_other_devices">其它可连接好友</string>
    <string name="button_scan">搜索好友</string>
    <string name="connect">我的好友</string>
    <string name="discoverable">设置在线</string>
    <string name="back">退出</string>
    <string name="startVideo">开始聊天</string>
    <string name="stopVideo">结束聊天</string>
    <string name="title_activity_device_list">DeviceList</string>


</resources>
