<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@drawable/bottom_bar"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <!--消息-->
    <LinearLayout
        android:id="@+id/msg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/msg_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#000"
            android:contentDescription="@string/message"
            android:src="@drawable/tab_weixin_normal" />

        <TextView
            android:id="@+id/msg_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <!--朋友-->
    <LinearLayout
        android:id="@+id/frd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/frd_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#000"
            android:contentDescription="@string/message"
            android:src="@drawable/tab_find_frd_normal" />

        <TextView
            android:id="@+id/frd_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/friend"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <!--通讯录-->
    <LinearLayout
        android:id="@+id/addr"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/addr_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#000"
            android:contentDescription="@string/message"
            android:src="@drawable/tab_address_normal" />

        <TextView
            android:id="@+id/addr_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <!--设置-->
    <LinearLayout
        android:id="@+id/set"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/set_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#000"
            android:contentDescription="@string/message"
            android:src="@drawable/tab_settings_normal" />

        <TextView
            android:id="@+id/set_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>